Prevent too much inheritance of styles for error/warning messages

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -7,5 +7,5 @@ $bg-warning: #ffffd8;
 $border-warning: #ff6;
 
 $font-family: verdana, geneva, tahoma, sans-serif;
-$font-size: 1.2rem;
+$font-size: 1rem;
 $font-weight: 700;
